# RustyViT

./: .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  rustfmt.toml  test.tar.xz
.github/workflows/: format.yml  rust.yml
benches/: Cargo.toml
benches/src/: Cargo.toml  bm_convolution.rs
crates/rusty-vit/: Cargo.toml
crates/rusty-vit/src/: lib.rs
crates/rvit-core/: Cargo.toml
crates/rvit-core/src/: approx.rs  device.rs  element_traits.rs  lib.rs  pixel_traits.rs  storage.rs  tensor.rs
crates/rvit-core/src/kernel_ops/: mod.rs  tensor.rs  vision.rs
crates/rvit-core/src/memory/: arena.rs  mod.rs  storage.rs
crates/rvit-core/src/tensor_ops/: float_ops.rs  mod.rs
crates/rvit-core/src/vision/: border.rs  interpolation.rs  mod.rs
crates/rvit-device/: Cargo.toml  build.rs
crates/rvit-device/src/: lib.rs  op_traits.rs  tensor.rs  vision_traits.rs
crates/rvit-device/src/cpu/: device.rs  memory.rs  mod.rs
crates/rvit-device/src/cpu/tensor/: binary_ops.rs  cast.rs  convolution.rs  matmul.rs  unary_ops.rs
crates/rvit-device/src/cpu/vision/: convolution.rs  crop.rs  flip.rs  make_border.rs  mod.rs  resize.rs
crates/rvit-device/src/cuda/: device.rs  mod.rs  utils.rs
crates/rvit-device/src/cuda/kernels/tensor/: cast.cu
crates/rvit-device/src/cuda/tensor/: binary_ops.rs  cast.rs  convolution.rs  matmul.rs  unary_ops.rs
crates/rvit-device/src/cuda/vision/: convolution.rs  crop.rs  flip.rs  make_border.rs  resize.rs
crates/rvit-device/src/tensor/: mod.rs  op_traits.rs
crates/rvit-device/src/tensor/cpu/: binary_ops.rs  cast.rs  convolution.rs  matmul.rs  mod.rs  unary_ops.rs
crates/rvit-device/src/tensor/cuda/: binary_ops.rs  cast.rs  convolution.rs  matmul.rs  mod.rs  unary_ops.rs
crates/rvit-device/src/tensor/cuda/kernels/: im2col.cu  unary_op.cu
crates/rvit-device/src/tensor/vulkan/: cast.rs  matmul.rs  mod.rs
crates/rvit-device/src/tensor/vulkan/shaders/: cast.glsl
crates/rvit-device/src/vision/: mod.rs  op_traits.rs
crates/rvit-device/src/vision/cpu/: convolution.rs  crop.rs  flip.rs  make_border.rs  resize.rs
crates/rvit-device/src/vision/cuda/: convolution.rs  crop.rs  flip.rs  make_border.rs  resize.rs
crates/rvit-device/src/vision/cuda/kernels/: make_border.cu
crates/rvit-device/src/vision/vulkan/: convolution.rs  crop.rs  flip.rs  make_border.rs  mod.rs  resize.rs
crates/rvit-device/src/vision/vulkan/shaders/: crop.glsl
crates/rvit-device/src/vulkan/: device.rs  mod.rs
crates/rvit-device/src/vulkan/tensor/: cast.rs  matmul.rs
crates/rvit-device/src/vulkan/vision/: convolution.rs  crop.rs  flip.rs  make_border.rs  resize.rs
crates/rvit-image/: Cargo.toml
crates/rvit-image/src/: image.rs  image_index.rs  lib.rs
crates/rvit-loader/: Cargo.toml
crates/rvit-loader/src/: lib.rs
crates/rvit-nn/: Cargo.toml
crates/rvit-nn/src/: lib.rs
crates/rvit-tensor/: Cargo.toml
crates/rvit-tensor/src/: basic_ops.rs  distribution.rs  index.rs  lib.rs  tensor.rs  tensor_ops.rs
crates/rvit-tensor/src/ops/: binary_ops.rs  cast.rs  convolution.rs  float_ops.rs  matmul.rs  mod.rs  unary_ops.rs
crates/rvit-tensor/src/tests/: binary_ops.rs  cast.rs  convolution.rs  matmul.rs  mod.rs  unary_ops.rs
crates/rvit-testgen/: Cargo.toml
crates/rvit-testgen/src/: lib.rs
crates/rvit-vision/: Cargo.toml
crates/rvit-vision/src/: convolution.rs  crop.rs  flip.rs  lib.rs  make_border.rs  resize.rs  sep_filters.rs
crates/rvit-vision/src/tests/: convolution.rs  crop.rs  flip.rs  make_border.rs  mod.rs  resize.rs
crates/rvit-vision/src/vision/: convolution.rs  crop.rs  flip.rs  make_border.rs  resize.rs  sep_filters.rs
crates/rvit-vk-backend/: Cargo.toml
crates/rvit-vk-backend/src/: pipeline_cache.rs  public_types.rs  staging_pool.rs  vk_handle.rs  vk_shader.rs
examples/general_vit/: Cargo.toml
examples/general_vit/src/: main.rs
examples/image_processing/: Cargo.toml
examples/image_processing/src/: main.rs
rusty-vit/: Cargo.toml  build.rs
rusty-vit/shaders/cuda/tensor/: binary_op.cu  shape_convert.cu
rusty-vit/shaders/cuda/vision/: resize.cu
rusty-vit/shaders/vulkan/tensor/: matmul.glsl
rusty-vit/shaders/vulkan/vision/: flip.glsl
rusty-vit/src/: lib.rs  type_traits.rs
rusty-vit/src/device/: cpu.rs  cu_utils.rs  cuda.rs  mod.rs  to_tensor.cu  vulkan.rs
rusty-vit/src/image/: cpu_image.rs  cu_image.rs  mod.rs
rusty-vit/src/loaders/: cifar.rs  mod.rs
rusty-vit/src/tensor/: distribution.rs  layer_norm.rs  matmul.rs  matrix_funcs.rs  mod.rs  tensor_cpu.rs
rusty-vit/src/tensor/binary_op/: binary_op_cpu.rs  binary_op_cu.rs  mod.rs
rusty-vit/src/tensor/cast/: cast_cpu.rs  cast_cu.rs  cast_vk.rs  mod.rs
rusty-vit/src/tensor/convolution/: conv_cpu.rs  conv_cu.rs  mod.rs
rusty-vit/src/tensor/matmul/: matmul_cpu.rs  matmul_cu.rs  matmul_vk.rs  mod.rs
rusty-vit/src/tensor/unary_op/: mod.rs  unary_cpu.rs  unary_cu.rs
rusty-vit/src/vision/: mod.rs  sep_filters.rs
rusty-vit/src/vision/convolution/: conv.cu  conv_cpu.rs  conv_cu.rs  conv_horiz.glsl  conv_vert.glsl  conv_vk.rs  mod.rs
rusty-vit/src/vision/crop/: crop.cu  crop_cpu.rs  crop_cu.rs  crop_vk.rs  mod.rs
rusty-vit/src/vision/flip/: flip.glsl  flip_cpu.rs  flip_cu.rs  flip_image.cu  flip_vk.rs  mod.rs
rusty-vit/src/vision/make_border/: make_border.cu  make_border.glsl  make_border_cpu.rs  make_border_cu.rs  make_border_vk.rs  mod.rs
rusty-vit/src/vision/resize/: mod.rs  resize.cu  resize.glsl  resize_cpu.rs  resize_cu.rs  resize_vk.rs
rusty-vk/: Cargo.toml
rusty-vk/src/: descriptor_cache.rs  lib.rs  pipeline_cache.rs  public_types.rs  resource_cache.rs  sampler_cache.rs  staging_pool.rs  vk_buffer.rs  vk_commands.rs  vk_device.rs  vk_instance.rs  vk_shader.rs  vk_texture.rs
