[workspace.package]
name = "RustyViT"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/RustyViT"
keywords = ["AI", "Vision", "VIT", "VisionTransformer"]

[workspace]
members = [
    "rusty-vit",
    "rusty-vk",
    "examples/*",
    "benches"
]
resolver = "2"

[workspace.dependencies.rusty-vit]
version = "0.1.0"
path = "rusty-vit"

[workspace.dependencies.rusty-vk]
version = "0.1.0"
path = "rusty-vk"

[workspace.dependencies]
log = "0.4"
rayon = "1.11.0"
clap = "4.5.45"
rand = "0.9.2"
criterion = { version = "0.5", features = ["html_reports"] }
num = "0.4.3"
cudarc = { version = "0.17.3", default-features = false }
image = " 0.25.8"
show-image = "0.14.1"
vk-mem = "0.5.0"
ash = "0.38.0"
env_logger = "0.11.8"




