[workspace.package]
name = "RustyViT"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/RustyViT"
keywords = ["AI", "Vision", "VIT", "VisionTransformer"]

[workspace]
members = [
    "crates/*",
    "benches/*",
    "examples/*"
]
resolver = "2"

[workspace.dependencies.rusty-vit]
version = "0.1.0"
path = "crates/rusty-vit"

[workspace.dependencies.rvit-nn]
version = "0.1.0"
path = "crates/rvit-nn"

[workspace.dependencies.rvit-tensor]
version = "0.1.0"
path = "crates/rvit-tensor"

[workspace.dependencies.rvit-vision]
version = "0.1.0"
path = "crates/rvit-vision"

[workspace.dependencies.rvit-vk-backend]
version = "0.1.0"
path = "crates/rvit-vk-backend"

[workspace.dependencies.rvit-loader]
version = "0.1.0"
path = "crates/rvit-loader"

[workspace.dependencies.rvit-core]
version = "0.1.0"
path = "crates/rvit-core"

[workspace.dependencies.rvit-device]
version = "0.1.0"
path = "crates/rvit-device"

[workspace.dependencies.rvit-testgen]
version = "0.1.0"
path = "crates/rvit-testgen"

[workspace.dependencies]
log = "0.4"
rayon = "1.11.0"
clap = "4.5.45"
rand = "0.9.2"
rand_distr = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }
num = "0.4.3"
num-traits = "0.2.19"
cudarc = { version = "0.17.3", default-features = false }
image = " 0.25.8"
show-image = "0.14.1"
vk-mem = "0.5.0"
ash = "0.38.0"
env_logger = "0.11.8"
half = { version = "2.7.1", features = ["std", "num-traits"] }
gemm = "0.19.0"
bytemuck = "1.24.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
paste = "1.0.15"
thiserror = "2.0.17"






