[package]
name = "rusty-vit"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/RustyViT"

[dependencies]
rusty-vk = { workspace = true, optional = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
rand = { workspace = true }
num = { workspace = true }
cudarc = { workspace = true, optional = true, features = ["cublas", "nvrtc", "cuda-version-from-build-system", "std", "dynamic-linking"] }
env_logger = { workspace = true }

[build-dependencies]
glob = "0.3.3"
shaderc = "0.10.1"

[dev-dependencies]
approx = "0.5.1"

[features]
default = ["cpu"]
cpu = ["dep:rayon"]
cuda = ["dep:cudarc"]
vulkan = ["dep:rusty-vk"]

