[package]
name = "rusty-vit"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/RustyViT"

[dependencies]
rusty-vk = { workspace = true, optional = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
rand = { workspace = true }
rand_distr = "0.5.1"
num = { workspace = true }
cudarc = { workspace = true, optional = true, features = ["cublas", "nvrtc", "cuda-11080", "std", "dynamic-linking", "f16"] }
gemm = "0.18.2"
half = "2.7.1"

[build-dependencies]
glob = "0.3.3"
shaderc = "0.10.1"

[dev-dependencies]
approxim = { version = "0.6.6", features = ["array_impl"] }

[features]
default = ["cpu"]
cpu = ["dep:rayon"]
cuda = ["dep:cudarc"]
vulkan = ["dep:rusty-vk"]

