[package]
name = "rusty-vk"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/RustyViT"

[dependencies]
log = { workspace = true }
ash = { workspace = true, features = ["loaded", "debug", "std"] }
vk-mem = { workspace = true }
env_logger = { workspace = true }
num = { workspace = true }
rspirv-reflect = "0.9.0"
renderdoc = "0.12.1"

