[package]
name = "rusty-vit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/RustyViT"

[dependencies]
rvit-core = { workspace = true }
rvit-tensor = { workspace = true }
rvit-vision = { workspace = true }
rvit-device = { workspace = true }
half = { workspace = true }
paste = { workspace = true }
num-traits = { workspace = true }

[features]
default = ["cpu"]
cpu = ["rvit-tensor/cpu", "rvit-vision/cpu"]
cuda = ["rvit-tensor/cuda", "rvit-vision/cuda"]
vulkan = ["rvit-tensor/vulkan", "rvit-vision/vulkan"]




