[package]
name = "rvit-image"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/RustyViT/crates/rvit-image"

[dependencies]
rvit-core = { workspace = true }
rvit-device = { workspace = true }
log = { workspace = true }
num = { workspace = true }



