[package]
name = "rvit-tensor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/RustyViT"

[features]
default = ["cpu"]
cpu = ["rvit-device/cpu", "rvit-core/cpu"]
cuda = ["rvit-device/cuda", "rvit-core/cuda"]
vulkan = ["rvit-device/vulkan"]

[dependencies]
rvit-core = { workspace = true }
rvit-device = { workspace = true, optional = true }
rvit-testgen = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
half = { workspace = true }
num-traits = "0.2.19"



