[package]
name = "rvit-vision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/RustyViT"

[features]
default = ["cpu"]
cpu = ["rvit-device/cpu"]
cuda = ["rvit-device/cuda"]
vulkan = ["rvit-device/vulkan"]

[dependencies]
rvit-core = { workspace = true }
rvit-device = { workspace = true }
rvit-image = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approxim = { version = "0.6.6", features = ["array_impl"] }




