[package]
name = "rvit-vision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/RustyViT"

[features]
default = ["cpu"]
cpu = ["rvit-device/cpu", "rvit-core/cpu"]
cuda = ["rvit-device/cuda", "rvit-core/cuda"]
vulkan = ["rvit-device/vulkan"]

[dependencies]
rvit-core = { workspace = true }
rvit-device = { workspace = true }
rvit-testgen = { workspace = true }
rvit-tensor = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
paste = { workspace = true }





